--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8"
-        <title>a fome no mundo</title>
+        <title></title>
         <link rel="stlylesheet" href="style.css">
 
     </head>
