--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<meta lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <link rel="stlylesheet" href="style.css">
@@ -10,7 +10,8 @@
         
          <h1 class:"titulo-principal">
             a fome no mundo
-         </h1>   
+         </h1>
+         <h1> A fome no planeta terra é um dos <strong>piores problemas</strong>  a ser resolvido</h1>   
         </header>
 
     </body>
