--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <h1 class:"titulo-principal">
             a fome no mundo
          </h1>
-         <h1> A fome no planeta terra é um dos <strong>piores problemas</strong>  a ser resolvido</h1>   
+         <p> A fome no planeta terra é um dos <strong>piores problemas</strong>  a ser resolvido </p>
         </header>
 
     </body>
