--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         
          <h1 class:"titulo-principal">
             a fome no mundo
-         </h1>
+            </h1>
          <p> A fome no planeta terra é um dos <strong>piores problemas</strong>  a ser resolvido </p>
+            <p> Segundo o relatório da FAO, em 2022 o número de pessoas que passaram fome no mundo aumentou em 122 milhões de pessoas em relação a 2019</p>
         </header>
 
     </body>
