--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
          <p> A fome no planeta terra é um dos <strong>piores problemas</strong>  a ser resolvido </p>
             <p> Segundo o relatório da FAO, em 2022 o número de pessoas que passaram fome no mundo aumentou em 122 milhões de pessoas em relação a 2019</p>
         </header>
-        <ing id="banner" src="banner.jpg" alt="imagems da fome">
+        <img id="banner" src="banner.jpg" alt="imagems da fome">
+
+        <img id="foto"
 
 
 
