--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         </header>
         <img id="banner" src="banner.jpg" alt="imagems da fome">
 
-        <img id="foto"
+        <img id="foto"   src="foto1.jpeg">
 
+        <img id="foto"   src="foto2.jpeg" alt="imagens da fome"
 
 
     </body>
