--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         <img id="foto"   src="foto1.jpeg">
 
-        <img id="foto"   src="foto2.jpeg" alt="imagens da fome"
+        <img id="foto"   src="foto2.jpeg">
+        <img id="foto"   src="foto3.jpeg">
 
 
     </body>
